--- a/modules/tinymce/package.json
+++ b/modules/tinymce/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "tinymce",
-  "version": "5.3.0",
-  "private": true,
+  "name": "@rtc/tinymce",
+  "version": "5.3.0-rtc-build.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/tinymce/tinymce"
@@ -24,5 +23,8 @@
   },
   "dependencies": {
     "tslib": "^1.9.3"
+  },
+  "publishConfig": {
+    "registry": "http://nexus:8081/repository/ephox-npm/"
   }
 }
