--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
       "tinymce/themes/mobile/*": ["modules/tinymce/src/themes/mobile/main/ts/*"],
       "tinymce/themes/silver/demo/*": ["modules/tinymce/src/themes/silver/demo/ts/*"],
       "tinymce/themes/silver/*": ["modules/tinymce/src/themes/silver/main/ts/*"],
+      "tinymce/plugins/acex/*": ["modules/tinymce/src/plugins/acex/main/ts/*"],
       "tinymce/plugins/advlist/*": ["modules/tinymce/src/plugins/advlist/main/ts/*"],
       "tinymce/plugins/anchor/*": ["modules/tinymce/src/plugins/anchor/main/ts/*"],
       "tinymce/plugins/autolink/*": ["modules/tinymce/src/plugins/autolink/main/ts/*"],
